Split @ConfigMapping and @ConfigProperties processing, and the generation of config classes from runtime aspects